--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "express-massive-backend",
+  "name": "simulation-2",
   "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
+  "description": "DevMountain skills check 2",
+  "main": "server/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watchTestControllers": "nodemon --watch src/controllers -e js,spec.js --exec \"jasmine\"",
@@ -41,21 +41,26 @@
   "bugs": {
     "url": "https://github.com/jtmorrisbytes/react-express/issues"
   },
-  "homepage": "https://github.com/jtmorrisbytes/react-express#readme",
+  "homepage": "",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "massive": "^6.2.0",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "node-sass": "^4.13.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.1"
   },
+  "proxy": "http://localhost:3001",
   "private": true,
   "devDependencies": {
     "jasmine-node": "^3.0.0"
